# specialists

./: .gitignore  .gitleaks.toml  .npmignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY-PIPELINE.md  compose.yml  handoff-feedor.md  package.json  requirements.txt  specialists.scheme.md  vitest.config.ts
.beads/: PRIME.md  config.yaml
.githooks/: .security-pipeline-baseline  pre-commit  pre-commit.local  pre-push  pre-push.local
.github/: dependabot.yml
.pi/: settings.json
.specialists/: version-check.json
.triage/: apply.sh  cycles.before.txt  dup-mechanical.json  lint.txt  open.json  stale.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  memory.md
.xtrm/: memory.md  registry.json  statusline-claim
clients/python/: README.md  pyproject.toml  specialists_client.py
clients/python/tests/: test_smoke.py
config/: presets.json
docker/: compose.example.yml
docs/: ARCHITECTURE.md  authoring.md  background-jobs.md  bare-specialists.md  bootstrap.md  cli-reference.md  deploying-alongside.md  epic-readiness.md  features.md  hooks.md  installation.md  manifest.md  mcp-servers.md  mcp-tools.md  observability-metrics.md  pi-rpc-boundary.md  pi-session.md  release.md  skills.md  specialists-catalog.md  specialists-service-install.md  specialists-service.md  surface-ownership.md  workflow.md  worktree.md  worktrees.md
scripts/: assert-package-payload.sh  generate-asset-contract.mjs  security-scan.sh  semgrep-diff.sh
src/: index.ts  server.ts
tmp/: pi-stdout-capture.stderr
(+547 files in other folders)
