[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specialists-client"
version = "0.1.0"
description = "Stdlib-only Python client for the specialists-service HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaggerxtrm" }]
keywords = ["specialists", "llm", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Stdlib-only by design — no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/Jaggerxtrm/specialists"
Repository = "https://github.com/Jaggerxtrm/specialists"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
py-modules = ["specialists_client"]

[tool.setuptools.packages.find]
where = ["."]
include = []
